--- a/src/SiteWrapper.css
+++ b/src/SiteWrapper.css
@@ -20,5 +20,14 @@
     font-size: 40px;
     padding-bottom: 40px;
     padding-top: 60px;
-    height: 90%;
+    /* height: 90%; */
+}
+
+.contribute-button {
+    margin-left: 18px;
+}
+
+.randomButton {
+    height: 80px;
+    font-size: 30px !important;
 }
